--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2556,107 +2556,107 @@ stories:
   domain: http://www.louisville.com/voice.html
   link: https://www.louisville.com/2nd-and-Ali/ep-4-we-love-daily-grind
 images:
-- name: hollywood-building-hollywood-building-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-post-modern.jpg
-- name: paris-paris-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crunch-paper.jpg
-- name: mosaic-face-mosaic-face-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-hot-spicy.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-- name: fence-fence-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-soul.jpg
-- name: catacombs-catacombs-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-kand-two.jpg
-- name: beach-clouds-lifeguard-beachclouds-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crabapple.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-nazi-poster.jpg
-- name: old-granary-field-oldhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-brush.jpg
-- name: birdhouse-birdhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kandinsky-bv.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-- name: old-cabin-oldcabin-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-mucha-mult.jpg
-- name: old-church-oldchurch-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-sand-paper.jpg
-- name: server-cloud-server-racks-door-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-constitution.jpg
-- name: eduardo-eduardo-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crunch-paper.jpg
-- name: bluelake-neo-instinct-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-01-17-38.jpg
-- name: desert-dragon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-dark-dali.jpg
-- name: sand-hand-sand-hand-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
-- name: store-on-corner-store-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-graham-sutherland.jpg
-- name: server-cloud1-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-free-woman.jpg
-- name: aws-s3-stories-art-museum-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-art-museum-dark-dali.jpg
-- name: old-granary-field-oldhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-paper.jpg
-- name: nazi-invasion-IMG_6436.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6436.jpg
-- name: oldroad-old-road-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-rain.jpg
-- name: adam-smith-adam-smith-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-internet-numbers.jpg
-- name: rockingchair-face-2-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-circuit.jpg
-- name: locked-up-steam-lock-up-steam-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smooth-ride.jpg
-- name: gypsy-wagon-gypsywagon-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dark-rain.jpg
-- name: downtheline-downtheline-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-storm.jpg
-- name: downtown-trucksilo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-really-hot.jpg
-- name: udnie-DSC_0264.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0264.jpg
-- name: razorcliff-razorcliff-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colorful-blocks.jpg
-- name: berlinwall-DSC-0084-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-marcel-duchamp.jpg
-- name: blossombar-far-away-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-00-00.jpg
-- name: docks-docks-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-diego-rivera1.jpg
-- name: curtain-curtain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-clean-view.jpg
-- name: server-cloud-server-racks-door-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alberto-giacometti.jpg
-- name: dragon-desert-desert-dragon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon.jpg
-- name: oldhouse-oldhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crafty-painting.jpg
-- name: carry-load-carryload-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-monet-one.jpg
-- name: stories-losangeles-from-observatory-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-losangeles-from-observatory-free-woman.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-really-hot.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-really-hot.png
-- name: christianity-christianity-under-construction-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-mucha-mult.jpg
-- name: san-francisco-street-view-san-francisco-street-view-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sand-paper.jpg
-- name: containership-containership-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-4.jpg
-- name: carry-load-carryload-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kandinsky-bv.jpg
-- name: store-on-corner-oldcabin-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-green-zuma.jpg
-- name: fence-mexico-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-color.jpg
-- name: old-house-oldhouse-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sunday.jpg
-- name: art-museum-art-museum-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-plentiful.jpg
-- name: server-cloud-server-racks-clouds-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-5.jpg
+- name: berlinwall-DSC-0084-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-diego-rivera1.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crabapple.jpg
+- name: status-berlin-status-berlin-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-free-woman.jpg
+- name: oldcabin-oldcabin-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-neo-instinct.jpg
+- name: old-granary-field-oldhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-kand-two.jpg
+- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
+- name: downtown-los-angeles-downtown-la-mucha-mult.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-mucha-mult.JPG
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
+- name: gypsymosaic-gypsy-eyes-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-gan-vogh.jpg
+- name: fence-fence-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-atari-missle.jpg
+- name: catacombs-catacombs-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-far-away.jpg
+- name: carry-load-carryload-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-circuit.jpg
+- name: old-granary-field-granaryfield-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-pablo-blue.jpg
+- name: containership-containership-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smooth-ride.jpg
+- name: old-gas-pumps-oldgaspumps-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purple-pond.jpg
+- name: curtain-curtain-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-dream.jpg
+- name: crow-crow-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-blocks.jpg
+- name: beach-rocks-beach-rocks-currents-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-umberto-bocc.jpg
+- name: sand-hand-sand-hand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand.jpg
+- name: aws-s3-square-beach-rocks-currents-blue-circuit-5-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5-square.jpg
+- name: fence-mexico-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-collage.jpg
+- name: curtain-curtain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-yellow-collage.jpg
+- name: wind-mills-windmills-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-internet-numbers.jpg
+- name: old-church-oldchurch-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-ww2-color.jpg
+- name: old-school-house-old-schoolhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-granite.jpg
+- name: trucksilo-trucksilo-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-rain.jpg
+- name: white-house-lawn-white-house-window-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-satan-red.jpg
+- name: docks-docks-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-nazi-poster.jpg
+- name: gears-4882162452-fa3126b38d-b-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-space-pizza.jpg
+- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+- name: school-clouds-church-clouds-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-copper-circuit.jpg
+- name: containership-containership-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-far-away.jpg
+- name: meadowbutterfly-meadow-butterfly-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-marcel-duchamp.jpg
+- name: containership-containership-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
+- name: status-berlin-status-berlin-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-4.jpg
+- name: oldsmallboat-oldsmallboat-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-really-hot.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+- name: mediterranean-mediterranean-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-pond.jpg
+- name: art-museum-art-museum-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-space-pizza.jpg
+- name: oldsmallboat-oldsmallboat-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-aqua.jpg
+- name: lincoln-memorial-lincolnmemorial-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-electricity.jpg
+- name: ellis-island-ellisisland-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-yellow-collage.jpg
+- name: oldhouse-granaryfield-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colored-circuits.jpg
+- name: windowmountain-window-mountain-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-ww2-color.jpg
+- name: christianity-christianity-under-construction-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gan-vogh.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
+- name: udnie-IMG_8358.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8358.jpg
+- name: old-school-house-old-schoolhouse-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit-4.jpg
+- name: crow_crafty_painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crafty_painting.jpg
+- name: docks-docks-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-copper-circuit-2.jpg
 ---
 Wayne County High School Graduation.&nbsp;Arapahoe Basin Ski Area To Open Terrain Park For Skiing, Riding Saturday And Sunday.&nbsp;Patricia Arquette Nearly 'passed Out' After Oscar Win.&nbsp;Georgia Track And Field Athletes Have Strong Showings At National Summer Events.&nbsp;Find Resources For Social Security Disability Beneficiaries Who Want To Work.&nbsp;Clippers Thunder Trade Basketball.&nbsp;Downtown Bristols First Nationally Branded Hotel Breaks Ground On State Street.&nbsp;Local Students Make Deans List, Graduate From Newberry College.&nbsp;
